[gd_scene load_steps=8 format=3 uid="uid://b2vq8fbbvi7r1"]

[ext_resource type="Script" uid="uid://dwd4glll4ts1e" path="res://UI/WinPanel.gd" id="1_4en8n"]
[ext_resource type="FontFile" uid="uid://dvn073b5o2dwm" path="res://img/fonts/Orbit-Regular.ttf" id="2_vo7cj"]

[sub_resource type="LabelSettings" id="LabelSettings_vo7cj"]
font_size = 22

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_al0eh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f3ck2"]
bg_color = Color(0.821789, 0.821789, 0.821788, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dwtim"]
bg_color = Color(0.758192, 0.758192, 0.758191, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yak67"]
bg_color = Color(0.74978, 0.74978, 0.74978, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="WinPanel" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_4en8n")

[node name="Menu" type="Panel" parent="."]
offset_left = 416.0
offset_top = 192.0
offset_right = 734.0
offset_bottom = 384.0

[node name="Label" type="Label" parent="Menu"]
layout_mode = 0
offset_left = 80.0
offset_top = 8.0
offset_right = 240.0
offset_bottom = 39.0
text = "Вы победили!"
label_settings = SubResource("LabelSettings_vo7cj")

[node name="PlayerName" type="TextEdit" parent="Menu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.503
anchor_top = 0.458
anchor_right = 0.503
anchor_bottom = 0.458
offset_left = -87.954
offset_top = -31.936
offset_right = 88.046
offset_bottom = 24.064
placeholder_text = "  Введите ваше имя"

[node name="Menu" type="Button" parent="Menu"]
layout_mode = 2
anchor_left = 0.5
anchor_top = 0.812
anchor_right = 0.5
anchor_bottom = 0.812
offset_left = -55.0
offset_top = -19.904
offset_right = 57.0
offset_bottom = 20.096
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("2_vo7cj")
theme_override_font_sizes/font_size = 20
theme_override_styles/focus = SubResource("StyleBoxEmpty_al0eh")
theme_override_styles/hover = SubResource("StyleBoxFlat_f3ck2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_dwtim")
theme_override_styles/normal = SubResource("StyleBoxFlat_yak67")
text = "Выйти"

[connection signal="pressed" from="Menu/Menu" to="." method="_on_menu_pressed"]
